fix: makes colors of links OK on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,6 +6,9 @@ body {
   font-size: 1.2em;
 }
 
-a {
+a,
+a:link,
+a:visited,
+a:hover {
   color: #777;
 }
